...
  style?: StyleProp<ViewStyle>;
};

export function NextClassButton({ style }: Readonly<Props>) {
  return (
    <Pressable
      testID="nextClassButton"
      style={[styles.button, style]}
      onPress={() => router.push("/(tabs)/calendar")}
    >
      <Image
        source={require("../../assets/images/google-calendar-icon.png")}
        style={styles.icon}
...
